main page links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     </div>
     <nav class="nav">
       <a href="#programs">Programs</a>
+
+      <!-- UPDATED: direct page link + in-page anchor -->
+      <a href="/OpenData/istac/">Open Data (ISTAC)</a>
       <a href="#open-data">Open Data & Apps</a>
+
       <a href="#library">Library</a>
       <a href="#events">Events</a>
       <a href="#team">Team</a>
@@ -114,7 +118,8 @@
             Browse and filter large datasets curated by AIRC. Designed for students and
             practitioners who want to explore data without needing to install anything locally.
           </p>
-          <a href="#" class="text-link">Launch Streamlit app (coming soon)</a>
+          <!-- UPDATED -->
+          <a href="/OpenData/istac/" class="text-link">Open ISTAC catalog &amp; GeoParquet explorer</a>
         </article>
 
         <article class="card">
@@ -206,16 +211,6 @@
             innovation, with a focus on practical, community-centered applications.
           </p>
         </article>
-
-        <!-- Add additional board members here -->
-        <!--
-        <article class="card person">
-          <img src="assets/img/team/name.jpg" alt="Photo of Name">
-          <h5>Name</h5>
-          <p class="role">Board Member</p>
-          <p class="bio">Short 2–3 sentence bio.</p>
-        </article>
-        -->
       </div>
 
       <h4 class="subheading">Volunteer Coordinators &amp; Mentors</h4>
@@ -229,8 +224,6 @@
             structured interviews for publication.
           </p>
         </article>
-
-        <!-- Add individual volunteers as you collect bios and photos -->
       </div>
     </section>
 
