--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a href="#programs">Programs</a>
 
       <!-- UPDATED: direct page link + in-page anchor -->
-      <a href="/OpenData/istac/">Open Data (ISTAC)</a>
-      <a href="#open-data">Open Data & Apps</a>
+      <a href="/OpenData/istac/">ISTAC</a>
+      <a href="/OpenData/">Open Data</a>
 
       <a href="#library">Library</a>
       <a href="#events">Events</a>
