adding collection json

--- a/OpenData/index.html
+++ b/OpenData/index.html
@@ -92,7 +92,7 @@
           <ul>
             <li><a class="text-link" href="https://stac.overturemaps.org">Overture STAC endpoint</a></li>
             <li><a class="text-link" href="https://docs.overturemaps.org/guides/buildings/">Buildings guide</a></li>
-            <li><a class="text-link" href="https://docs.overturemaps.org/guides/duckdb/">DuckDB guide</a></li>
+            <li><a class="text-link" href="https://docs.overturemaps.org/getting-data/duckdb/">DuckDB guide</a></li>
           </ul>
         </article>
       </div>
